--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "@auth0/auth0-angular": "^2.2.3",
     "rxjs": "~7.8.0",
+    "split-type": "^0.3.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
