--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@auth0/auth0-angular": "^2.2.3",
     "gsap": "^3.12.5",
     "html2pdf.js": "^0.9.3",
+    "ngx-lottie": "^13.0.0",
     "rxjs": "~7.8.0",
     "split-type": "^0.3.4",
     "tslib": "^2.3.0",
