--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 6969",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,7 +20,9 @@
     "@angular/router": "^17.0.0",
     "@auth0/auth0-angular": "^2.2.3",
     "gsap": "^3.12.5",
+    "handlebars": "^4.7.8",
     "html2pdf.js": "^0.9.3",
+    "jspdf": "^3.0.0",
     "ngx-lottie": "^13.0.0",
     "rxjs": "~7.8.0",
     "split-type": "^0.3.4",
